--- a/emailops-build/roles/build-zimbra/tasks/maildrop/cos.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/cos.yml
@@ -6,22 +6,22 @@
 ##
 ## apply class of service
 ##
-- name: (POSTINSTALL) Add client CoS
+- name: (POSTINSTALL/MAILDROP) Add client CoS
   command: "{{ install_dir }}/bin/zmprov cc {{ item }}"
   with_items: "{{ cos_list|default([]) }}"
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Get CoS listing from Zimbra
+- name: (POSTINSTALL/MAILDROP) Get CoS listing from Zimbra
   command: "{{ install_dir }}/bin/zmprov -l gac"
   register: cos_listing
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Modify CoS entries
-  command: "/opt/zimbra/bin/zmprov mc {{ item }} zimbraAttachmentsIndexingEnabled FALSE zimbraFeatureBriefcaseDocsEnabled FALSE zimbraFeatureBriefcaseSlidesEnabled FALSE 
+- name: (POSTINSTALL/MAILDROP) Modify CoS entries
+  command: "/opt/zimbra/bin/zmprov mc {{ item }} zimbraAttachmentsIndexingEnabled FALSE zimbraFeatureBriefcaseDocsEnabled FALSE zimbraFeatureBriefcaseSlidesEnabled FALSE
     zimbraFeatureBriefcaseSpreadsheetEnabled FALSE zimbraFeatureBriefcasesEnabled FALSE zimbraFeatureChangePasswordEnabled FALSE zimbraPrefCalendarAlwaysShowMiniCal FALSE
     zimbraFeatureConfirmationPageEnabled TRUE zimbraFeatureIMEnabled FALSE zimbraFeatureMAPIConnectorEnabled FALSE zimbraFeatureMobileSyncEnabled FALSE zimbraFeatureMobilePolicyEnabled FALSE
     zimbraFeatureSkinChangeEnabled TRUE"
