--- a/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
@@ -64,7 +64,7 @@
 ##
 ## Apply proxy config
 ##
-- name: Apply Zimbra proxy configuration
+- name: (POSTINSTALL) Apply Zimbra proxy configuration
   command: "{{ install_dir }}/libexec/zmproxyconfig -w -e -u -a 0:80:0:443 -x both -H {{ hostvars[inventory_hostname]['ansible_fqdn'] }}"
   become: yes
   become_user: zimbra
