--- a/emailops-build/roles/build-zimbra/tasks/ldap/replica.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/replica.yml
@@ -6,13 +6,14 @@
 ##
 ## Set up replica if this is an ldap master
 ##
-- name: (POSTINSTALL) Run zmldapenablereplica if this is an LDAP master
+- name: (POSTINSTALL/LDAP) Run zmldapenablereplica if this is an LDAP master
   command: /opt/zimbra/libexec/zmldapenablereplica
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- command: "{{ install_dir }}/bin/ldap restart"
+- name: (POSTINSTALL/LDAP) Restart LDAP after enabling MMR
+  command: "{{ install_dir }}/bin/ldap restart"
   become: yes
   become_user: zimbra
   become_method: sudo
