--- a/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
@@ -6,44 +6,44 @@
 ##
 ## Make Zimbra scality-aware (z7)
 ##
-- name: (POSTINSTALL) Restart scality-srestd services
+- name: (POSTINSTALL/MAILDROP) Restart scality-srestd services
   service:
     name=scality-srestd
     status=restarted
   when: zimbra_major_version == 7
 
-- name: (POSTINSTALL) Restart lighttpd services
+- name: (POSTINSTALL/MAILDROP) Restart lighttpd services
   service:
     name=lighttpd
     state=restarted
   when: zimbra_major_version == 7
 
-- name: (POSTINSTALL) Verify scality is running
+- name: (POSTINSTALL/MAILDROP) Verify scality is running
   command: curl -0 -X HEAD http://localhost:81/srestd.fcgi?09E195C180884F7F2181FB639B5ED5066BCF8C30 -v
   register: scality_response
   when: zimbra_major_version == 7
 
-- name: (POSTINSTALL) Obtain Zimbra scality connector version
+- name: (POSTINSTALL/MAILDROP) Obtain Zimbra scality connector version
   command: rpm -qa zimbra_connector | sed 's/\.x86_64$//' | sed 's/-[0-9]$//'
   register: scality_version
 
 ##
 ## Determine if patch is necessary and apply as required
 ##
-- name: (POSTINSTALL) Determine if Scality patching is required
+- name: (POSTINSTALL/MAILDROP) Determine if Scality patching is required
   shell: "grep volume_id {{ install_dir }}/db/create_database.sql | grep -i \"varchar(40)\" | wc -l"
   register: patch_count
 
-- name: (POSTINSTALL) Apply patch as necessary
+- name: (POSTINSTALL/MAILDROP) Apply patch as necessary
   shell: "cd {{ install_dir }}/db && patch -b -p0 < /usr/share/doc/{{ scality_version.sysout }}/create_database.sql.patch"
   when: patch_count == 0
 
-- name: (POSTINSTALL) List modifiable tables
+- name: (POSTINSTALL/MAILDROP) List modifiable tables
   command: "{{ install_dir }}/bin/mysql -N -e \"show databases like 'mboxgroup%'\""
   register: mboxgroup
   when: patch_count == 0
 
-- name: (POSTINSTALL) Apply SQL fix as necessary
+- name: (POSTINSTALL/MAILDROP) Apply SQL fix as necessary
   command: "{{ install_dir }}/bin/mysql -N -e \"alter table {{ item }}.mail_item drop foreign key fk_mail_item_volume_id;
     alter table {{ item }}.mail_item modify volume_id VARCHAR(40);
     alter table {{ item }}.revision modify volume_id VARCHAR(40)\""
@@ -53,7 +53,7 @@
 ##
 ## Make Zimbra scality-aware (z8)
 ##
-- name: (POSTINSTALL) Configuring Zimbra for Scality use (local config)
+- name: (POSTINSTALL/MAILDROP) Configuring Zimbra for Scality use (local config)
   command: "{{ install_dir }}/bin/zmlocalconfig -e zimbra_class_store=com.scality.zimbra.cs.store.ScalitySproxydStoreManager
     external_store_local_cache_max_files=25000 external_store_local_cache_max_bytes=21474836480"
   become: yes
@@ -61,7 +61,7 @@
   become_method: sudo
   when: zimbra_major_version == 8
 
-- name: (POSTINSTALL) Configuring Zimbra for Scality use (server config)
+- name: (POSTINSTALL/MAILDROP) Configuring Zimbra for Scality use (server config)
   command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} zimbraMessageCacheSize 10000 zimbraMailFileDescriptorCacheSize 20000
     -zimbraBackupSkipBlobs TRUE -zimbraBackupSkipBlobs FALSE -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE
     -zimbraMailboxMoveSkipBlobs FALSE -zimbraMailboxMoveSkipHsmBlobs TRUE -zimbraMailboxMoveSkipHsmBlobs FALSE"
@@ -70,14 +70,14 @@
   become_method: sudo
   when: zimbra_major_version == 8
 
-- name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
+- name: (POSTINSTALL/MAILDROP) Configuring Zimbra for Scality use (global config)
   command: "{{ install_dir }}/bin/zmprov mcf zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraMailboxMoveSkipBlobs TRUE
     zimbraMailboxMoveSkipHsmBlobs TRUE zimbraMailEmptyFolderBatchSize 100 zimbraMailPurgeBatchSize 100"
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
+- name: (POSTINSTALL/MAILDROP) Configuring Zimbra for Scality use (global config)
   command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} -zimbraBackupSkipBlobs TRUE -zimbraBackupSkipBlobs FALSE
     -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE -zimbraMailboxMoveSkipBlobs FALSE
     -zimbraMailboxMoveSkipHsmBlobs TRUE -zimbraMailboxMoveSkipHsmBlobs FALSE"
