--- a/emailops-build/roles/build-zimbra/tasks/maildrop/storeconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/storeconfig.yml
@@ -3,7 +3,7 @@
 #   DESCRIPTION:  Variables that apply to Zimbra maildrop installations
 #==============================================================================
 ---
-- name: (POSTINSTALL) Configure server stores (fstore)
+- name: (POSTINSTALL/MAILDROP) Configure server stores (fstore)
   file:
     group="{{ group_name }}"
     owner="{{ user_name }}"
@@ -11,25 +11,25 @@
     path="{{ install_dir }}/fstore"
     state=directory
 
-- name: (POSTINSTALL) Notify Zimbra of store (primary)
+- name: (POSTINSTALL/MAILDROP) Notify Zimbra of store (primary)
   command: "{{ install_dir }}/bin/zmvolume --add --name fstore --type primaryMessage --compress false --path {{ install_dir }}/fstore"
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Notify Zimbra of store (primary)
+- name: (POSTINSTALL/MAILDROP) Notify Zimbra of store (primary)
   command: "{{ install_dir }}/bin/zmvolume --id 3 --setCurrent"
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Notify Zimbra of store (secondary)
+- name: (POSTINSTALL/MAILDROP) Notify Zimbra of store (secondary)
   command: "{{ install_dir }}/bin/zmvolume --edit --id 1 --type secondaryMessage --compress true"
   become: yes
   become_user: zimbra
   become_method: sudo
 
-- name: (POSTINSTALL) Notify Zimbra of store (secondary)
+- name: (POSTINSTALL/MAILDROP) Notify Zimbra of store (secondary)
   command: "{{ install_dir }}/bin/zmvolume --setCurrent --id 1"
   become: yes
   become_user: zimbra
