--- a/emailops-build/group_vars/nginx/ssl-certs.yml
+++ b/emailops-build/group_vars/nginx/ssl-certs.yml
@@ -6,11 +6,15 @@
 ##
 ## ssl certs
 ##
-nginx_ssl_dir: /etc/nginx/ssl
 dhparam_keysize: 2048
-dhparam_output: "{{ nginx_ssl_dir }}/dhparams-nginx.pem"
-self_signed_enabled: TRUE
 
+nginx_ssl_dir: /etc/nginx/ssl
+nginx_dhparam_output: "{{ nginx_ssl_dir }}/dhparams-nginx.pem"
+
+zimbra_ssl_dir: /opt/zimbra/ssl/zimbra
+zimbra_dhparam_output: "{{ zimbra_ssl_dir }}/dhparams.pem"
+
+self_signed_enabled: TRUE
 openssl_self_signed:
   - name: 'mail'
     country: 'US'
