--- a/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
@@ -30,9 +30,9 @@
     state=directory
 
 - name: (POSTINSTALL) Generate 2048 bit DH key for nginx (logjam)
-  command: "/usr/bin/openssl dhparam -out {{ dhparam_output }} {{ dhparam_keysize }}"
+  command: "/usr/bin/openssl dhparam -out {{ nginx_dhparam_output }} {{ dhparam_keysize }}"
   args:
-    creates: "{{ dhparam_output }}"
+    creates: "{{ nginx_dhparam_output }}"
 
 ##
 ## Update nginx config
