--- a/emailops-build/roles/build-zimbra/tasks/main.yml
+++ b/emailops-build/roles/build-zimbra/tasks/main.yml
@@ -8,13 +8,11 @@
   notify:
     - sync puppet
 
-- meta:
-    flush_handlers
+- meta: flush_handlers
 
 - name: (MAIN) Run Zimbra post-installation
   include: run-postinstall.yml
   notify:
     - sync puppet
 
-- meta:
-    flush_handlers
+- meta: flush_handlers
