--- a/emailops-build/roles/build-zimbra/files/nginx.conf.web.http.template
+++ b/emailops-build/roles/build-zimbra/files/nginx.conf.web.http.template
@@ -1,23 +1,29 @@
-# HTTPS Proxy Default Configuration
+!{explode domain(vhn)}
+# HTTP Proxy Configuration
 # 
 server
 {
-    ${core.ipboth.enabled}listen                  [::]:${web.https.port} default;
-    ${core.ipv4only.enabled}listen                ${web.https.port} default;
-    ${core.ipv6only.enabled}listen                [::]:${web.https.port} default ipv6only=on;
-    server_name             ${web.server_name.default}.default;
-    client_max_body_size    0;
-    ssl                     on;
-    ssl_prefer_server_ciphers ${web.ssl.preferserverciphers};
-    ssl_ciphers             ${web.ssl.ciphers};
-    ssl_certificate         ${ssl.crt.default};
-    ssl_certificate_key     ${ssl.key.default};
-    ssl_dhparam             /opt/zimbra/conf/dhparams.pem;
-
+    server_name         ${vhn}; 
+    ${core.ipboth.enabled}listen            ${vip}:${web.http.port};
+    ${core.ipv4only.enabled}listen            ${vip}:${web.http.port};
+    ${core.ipv6only.enabled}listen            ${vip}:${web.http.port} ipv6only=on;
+    client_max_body_size 0;
 
     location /
     {
-        include             ${core.includes}/${core.cprefix}.web.https.mode-${web.mailmode};
+        include             ${core.includes}/${core.cprefix}.web.http.mode-${web.mailmode};
+
+        ## add custom error page documents
+        error_page 400 401 403 404 /40x.html;
+        location = /40x.html {
+            root    html;
+            allow   all;
+        }
+
+        error_page 500 501 502 503 504 /50x.html;
+        location = /50x.html {
+            root html;
+        }
 
         # Begin stray redirect hack
         # 
@@ -46,7 +52,7 @@ server
         # End stray redirect hack
 
         # Proxy to Zimbra Upstream
-        proxy_pass       ${web.upstream.target};
+        proxy_pass     ${web.upstream.target};
 
         # For audit
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -54,25 +60,18 @@ server
         # For Virtual Hosting
         set $virtual_host $http_host;
         if ($virtual_host = '') {
-            set $virtual_host $server_addr:$server_port;
+            set $virtual_host $server_name:$server_port;
         }
         proxy_set_header Host            $virtual_host;
 
-        # Location header fudging
-        # Because NGINX SSL speaks plain HTTP to upstream, therefore any
-        # redirects to http:// coming from the upstream need to be fudged
-        # to https://
-        # 
-        proxy_redirect http://$http_host/ https://$http_host/;
-
         # Fudge inter-mailbox redirects (kludge)
-        proxy_redirect http://$relhost/ https://$http_host/;
+        proxy_redirect http://$relhost/ http://$http_host/;
     }
 
     #For long polling of Microsoft ActiveSync
     location ^~ /Microsoft-Server-ActiveSync
     {
-        include             ${core.includes}/${core.cprefix}.web.https.mode-${web.mailmode};
+        include             ${core.includes}/${core.cprefix}.web.http.mode-${web.mailmode};
 
         # Begin stray redirect hack
         # 
@@ -101,9 +100,9 @@ server
         # End stray redirect hack
 
         # Proxy to Zimbra Upstream
-        proxy_pass          ${web.upstream.target};
-        proxy_read_timeout  ${web.upstream.polling.timeout};
-        proxy_buffering     off;
+        proxy_pass         ${web.upstream.target};
+        proxy_read_timeout ${web.upstream.polling.timeout};
+        proxy_buffering    off;
 
         # For audit
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -111,24 +110,17 @@ server
         # For Virtual Hosting
         set $virtual_host $http_host;
         if ($virtual_host = '') {
-            set $virtual_host $server_addr:$server_port;
+            set $virtual_host $server_name:$server_port;
         }
         proxy_set_header Host            $virtual_host;
 
-        # Location header fudging
-        # Because NGINX SSL speaks plain HTTP to upstream, therefore any
-        # redirects to http:// coming from the upstream need to be fudged
-        # to https://
-        # 
-        proxy_redirect http://$http_host/ https://$http_host/;
-
         # Fudge inter-mailbox redirects (kludge)
-        proxy_redirect http://$relhost/ https://$http_host/;
+        proxy_redirect http://$relhost/ http://$http_host/;
     }
 
     # For NoOpRequest
     location /service/soap/NoOpRequest {
-        include             ${core.includes}/${core.cprefix}.web.https.mode-${web.mailmode};
+        include             ${core.includes}/${core.cprefix}.web.http.mode-${web.mailmode};
     
         # Begin stray redirect hack
         #
@@ -157,9 +149,10 @@ server
         # End stray redirect hack
 
         # Proxy to Zimbra Upstream
-        proxy_pass          ${web.upstream.target};
-        proxy_read_timeout  ${web.upstream.noop.timeout};
-        proxy_buffering     off;
+        proxy_pass ${web.upstream.target};
+
+        proxy_read_timeout ${web.upstream.noop.timeout};
+        proxy_buffering    off;
 
         # For audit
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -171,20 +164,13 @@ server
         }
         proxy_set_header Host            $virtual_host;
 
-        # Location header fudging
-        # Because NGINX SSL speaks plain HTTP to upstream, therefore any
-        # redirects to http:// coming from the upstream need to be fudged
-        # to https://
-        #
-        proxy_redirect http://$http_host/ https://$http_host/;
-
         # Fudge inter-mailbox redirects (kludge)
-        proxy_redirect http://$relhost/ https://$http_host/;
+        proxy_redirect http://$relhost/ http://$http_host/;
     }
 
     # For WaitSetRequest
     location /service/soap/WaitSetRequest {
-        include             ${core.includes}/${core.cprefix}.web.https.mode-${web.mailmode};
+        include             ${core.includes}/${core.cprefix}.web.http.mode-${web.mailmode};
 
         # Begin stray redirect hack
         #
@@ -213,9 +199,10 @@ server
         # End stray redirect hack
 
         # Proxy to Zimbra Upstream
-        proxy_pass          ${web.upstream.target};
-        proxy_read_timeout  ${web.upstream.waitset.timeout};
-        proxy_buffering     off;
+        proxy_pass ${web.upstream.target};
+
+        proxy_read_timeout ${web.upstream.waitset.timeout};
+        proxy_buffering    off;
 
         # For audit
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -227,15 +214,8 @@ server
         }
         proxy_set_header Host            $virtual_host;
 
-        # Location header fudging
-        # Because NGINX SSL speaks plain HTTP to upstream, therefore any
-        # redirects to http:// coming from the upstream need to be fudged
-        # to https://
-        #
-        proxy_redirect http://$http_host/ https://$http_host/;
-
         # Fudge inter-mailbox redirects (kludge)
-        proxy_redirect http://$relhost/ https://$http_host/;
+        proxy_redirect http://$relhost/ http://$http_host/;
     }
 
     location ~* ^/zmerror_.*\.html$ {
